fixe incroyable les images s'alignent

--- a/site 2/test1.css
+++ b/site 2/test1.css
@@ -39,7 +39,7 @@ ul li a{
 
 .work{
 	margin : auto;
-	width : 100%;
+	height : 100%;
 	text-align : center;
 	
 }
@@ -65,8 +65,18 @@ padding-left : 2%;
 	text-align : center;
 }
 
+
+
 .projet img{
-	width : 100%;
+	
+	width : 90%;
+	max-height : 100%;
+}
+
+.projet a{
+	
+	max-width : 100%;
+	max-height : 100%;
 }
 
 ul li a:hover{
